--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
                 <img src="imgs/app/bg.png" class="brand_logo_sm">
                 <h1 class="logo_text"> ATCHA</h1>
             </div>
+            <form class="flex_container">
+                <input type="search" name="searchProfiles" placeholder="Search for your match">
+                <button class="btn theme" type="submit"><i class="material-icons">search</i></button>
+            </form>
             <nav class="flex_container" id="nav_container">
-                <a id="search_btn" class="btn theme_link">
-                    <span><i class="material-icons">search</i> Search</span>
-                </a>
-                <a id="profile_btn" class="btn theme_link" href="#/my-profile">
-                    <span><i class="material-icons">account_circle</i> Profile</span>
+                <a id="profile_btn" class="btn theme_link">
+                    <span><i class="material-icons">account_circle</i></span>
                 </a>
             </nav>
         </header>
