--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link href='https://fonts.googleapis.com/css?family=Cinzel Decorative' rel='stylesheet'>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <!--<link href='https://fonts.googleapis.com/css?family=Cinzel Decorative' rel='stylesheet'>-->
+        <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
+        <link rel="stylesheet" type="text/css" href="font_awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css" media="screen">
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/appControllers.js"></script>
@@ -11,27 +12,22 @@
         <title>Matcha</title>
     </head>
     <body>
-<!--        <div id="app_ui">-->
         <header class="flex_container toolbar">
             <div class="flex_container branding" id="logo">
                 <img src="imgs/app/bg.png" class="brand_logo_sm">
                 <h1 class="logo_text"> ATCHA</h1>
             </div>
-            <form class="flex_container">
-                <input type="search" name="searchProfiles" placeholder="Search for your match">
-                <button class="btn theme" type="submit"><i class="material-icons">search</i></button>
-            </form>
             <nav class="flex_container" id="nav_container">
                 <a id="profile_btn" class="btn theme_link">
-                    <span><i class="material-icons">account_circle</i></span>
+                    <span><i class="fa fa-user"></i></span>
                 </a>
             </nav>
         </header>
-        <!-- VIEW SWITCHER -->
-        <section id="main_content" class="views_container">
 
+        <section id="main_content" class="views_container">
+            <!-- main container -->
         </section>
-<!--        </div>-->
+
         <footer class="flex_container">
             <p>The Matcha Project</p>
             <p>maDezynIzM_E_ 2017</p>
